# dspy-code

./: .gitignore  .pre-commit-config.yaml  AI-GENERATED-CODE-POLICY.md  CONTRIBUTING.md  Claude.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/: SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  documentation.yml
.github/workflows/: deploy-docs.yml
docs/: index.md
docs/about/: changelog.md  contributing.md  index.md  license.md  why-dspy-code.md
docs/advanced/: cicd.md  custom-modules.md  deployment.md  mcp-integration.md
docs/getting-started/: first-program.md  installation.md  quick-start.md  understanding.md
docs/guide/: adapters.md  async-streaming.md  creating-gold-data.md  evaluation.md  generating-code.md  interactive-mode.md  model-connection.md  natural-language-commands.md  optimization.md  project-management.md  retrievers.md  running-programs.md  slash-commands.md  validation.md
docs/reference/: commands.md  configuration.md  faq.md  security.md  templates.md  troubleshooting.md
docs/stylesheets/: extra.css
docs/tutorials/: gepa-optimization.md  question-answering.md  rag-system.md  sentiment-analyzer.md
dspy_code/: main.py
dspy_code/commands/: config_command.py  create_command.py  demo_command.py  export_command.py  init_command.py  interactive_command.py  mcp_command.py  models_command.py  nl_command_router.py  optimize_command.py  run_command.py  slash_commands.py
dspy_code/core/: config.py  logging.py
dspy_code/export/: handler.py
dspy_code/generators/: gepa_generator.py
dspy_code/mcp/: client_manager.py
dspy_code/mcp/transports/: sse_transport.py  stdio_transport.py  websocket_transport.py
dspy_code/models/: llm_connector.py  model_manager.py
dspy_code/optimization/: workflow_manager.py
dspy_code/project/: scanner.py
dspy_code/rag/: __init__.py  codebase_rag.py  indexer.py  models.py
dspy_code/session/: state_manager.py
dspy_code/templates/: dspy_config_example.yaml  optimizers.py
dspy_code/ui/: animations.py  prompts.py  welcome.py
examples/: complete_workflow_example.py  email_classifier_demo.py  mcp_config_examples.yaml
tests/: __init__.py  test_anti_patterns.py  test_auto_fixer.py  test_execution_engine.py  test_export_import.py  test_integration.py  test_learning_integration.py  test_module_validator.py  test_optimization_workflow.py  test_predictor_validator.py  test_project_scanner.py  test_quality_scorer.py  test_report_generator.py  test_security.py  test_session_management.py  test_signature_validator.py  test_validation.py
