[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dspy-code"
version = "0.0.2"
description = "Claude Code for DSPy: AI-powered interactive development environment for DSPy"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Shashi Jagtap", email = "shashi@super-agentic.ai"},
    {name = "Shashi Jagtap", email = "shashikant.jagtap@icloud.com"}
]
maintainers = [
    {name = "Shashi Jagtap", email = "team@super-agentic.ai"},
    {name = "Shashi Jagtap", email = "shashikant.jagtap@icloud.com"}
]
keywords = ["dspy", "code", "ai", "nlp", "language-models", "interactive", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "dspy>=3.0.4",
    "rich>=13.0.0",
    "requests>=2.28.0",
    "pyyaml>=6.0",
    "mcp>=1.2.1",
    "anyio>=4.5",
    "httpx>=0.27.1",
    "httpx-sse>=0.4",
    "pydantic>=2.11.0,<3.0.0",
    "jsonschema>=4.20.0",
    "packaging>=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "types-requests>=2.31.0",
    "types-pyyaml>=6.0.12",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-xdist>=3.5.0",
]
mcp-ws = [
    "websockets>=15.0.1",
]

[project.urls]
Homepage = "https://github.com/SuperagenticAI/dspy-code"
Documentation = "https://superagenticai.github.io/dspy-code/"
Repository = "https://github.com/SuperagenticAI/dspy-code"
"Bug Tracker" = "https://github.com/SuperagenticAI/dspy-code/issues"
Changelog = "https://github.com/SuperagenticAI/dspy-code/blob/main/CHANGELOG.md"

[project.scripts]
dspy-code = "dspy_code.main:main"

[tool.hatch.build.targets.wheel]
packages = ["dspy_code"]
exclude = [
    "docs/",
    "mkdocs.yml",
]

[tool.hatch.build.targets.sdist]
include = [
    "dspy_code/",
    "tests/",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]
exclude = [
    "docs/",
    "mkdocs.yml",
]

# Ruff configuration - Modern, fast linter and formatter
[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes (undefined names, unused imports)
    "I",      # isort (import sorting)
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # module level import not at top
    "E712",   # true/false comparison
    "E722",   # bare except
    "E741",   # ambiguous variable name
    "F841",   # unused variable (beta - will fix later)
    "F821",   # undefined name (beta - will fix later)
    "F811",   # redefinition of unused (beta - will fix later)
    "F601",   # dictionary key repeated (beta - will fix later)
    "F402",   # import shadowed by loop var (beta - will fix later)
    "F823",   # undefined local (beta - will fix later)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG", "S101", "PLR2004"]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["dspy_code"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "dspy.*",
    "anthropic.*",
    "openai.*",
    "google.generativeai.*",
    "mcp.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["dspy_code"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
